--- a/index.html
+++ b/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" light-mode="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Micode Studio</title>
+
+    <!-- Robot.txt -->
+    <meta name="robots" content="index,follow" />
+    <meta name="Googlebot" content="index,follow" />
+    <meta name="AdsBot-Google" content="index,follow" />
+    <meta property="og:site_name" content="https://micodestudio.fr/">
+    <meta property="og:title" content="Micode Studio">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://micodestudio.fr//">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="https://micodestudio.fr//">
+    <meta name="application-name" content="Micode Studio" />
+    <meta name="apple-mobile-web-app-title" content="Micode Studio" />
+    <!--For Dark/Light mode Toggle-->
+    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
+    <!--Import Google Icon Font-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">    
+    <link rel="stylesheet" type="text/css" href="assets/css/home.css">
+    <link id='favicon' rel="shortcut icon" href="assets/images/favicon.png" type="image/x-png">
+    <!-- Font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    <!-- Loading -->
+    <link rel="stylesheet" href="assets/css/preloader.css">
 </head>
-<body>
-    <h1>Micode Studio</h1>
+<body class="no-scroll-preload">
+
+    <!-- Loading -->
+    <div class="loader-container">
+        <div class="atom">
+            <div class="electron"></div>
+            <div class="electron-alpha"></div>
+            <div class="electron-omega"></div>
+        </div>
+    </div>
+
+    <center>
+        <!-- Home Section -->
+        <div class="text col-sm-6" style="margin-top: 140px;"><span class="header">Micode</span>&nbsp;<span class="wave">Studio</span>
+            <div class="center">
+                <div>
+                    <br>
+                    <div class="social-icons">
+                        <a class="socialicon youtube" href="https://www.youtube.com/@Monsteerr" target="_blank" rel="author">
+                        </a>
+
+
+                        <a class="socialicon discord" href="https://discord.gg/YwBDPpVMe8" target="_blank" rel="author">
+                        </a>
+
+                        <a class="socialicon instagram" href="https://www.instagram.com/m00nsterr_/" target="_blank" rel="author">
+                            <!-- svg code for instagram icon -->
+                            <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
+                                <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
+                                <circle id="shutter" class="st0" cx="101" cy="101.5" r="8" />
+                                <circle id="lens" class="st0" cx="125.5" cy="78.6" r="2.9" />
+                                <path id="camera" class="st0" d="M79,60.5h44c10.5,0,19,8.5,19,19v44c0,10.5-8.5,19-19,19H79c-10.5,0-19-8.5-19-19v-44
+                                                                                                        C60,69,68.5,60.5,79,60.5z" />
+                            </svg>
+                        </a>
+                        <a class="socialicon github" href="https://github.com/daniutek1" target="_blank" rel="author">
+                            <!-- SVG code for Github icon -->
+                            <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
+                                <path id="body" d="M112.5,234.4v43.1c24.5,7.5,50.5,7.5,75,0V225c-0.4-11.1-4.9-21.6-12.7-29.6c30-3.4,59.5-23.5,59.5-64.1
+                                                            c0.9-13.9-3.3-27.7-11.8-38.7c4.1-11.6,3.7-24.4-1.3-35.7c0,0-11.2-3.7-37.5,13.8c-22.1-6.1-45.3-6.1-67.4,0
+                                                            C90.6,53.3,78.9,56.8,78.9,56.8c-5,11.3-5.4,24.1-1.3,35.7c-8.5,11.1-12.7,24.8-11.9,38.7c0.2,33.8,26.4,61.8,60.2,64.1
+                                                            c-5,4.7-8.1,11.1-8.6,18" />
+                                <path id="arm" d="M125.2,213.4c-13.9,7.8-31.5,2.8-39.3-11.2c-4.3-7.7-12-12.8-20.7-13.8c-11.2,0-4.6,6.4,0,9.4
+                                                            c6,5.1,10.8,11.5,13.8,18.8c2.9,7.4,7.7,24.1,41.5,17.8" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </center>
+
+    <br><br><br>
+    <!-- Dynamic footer section -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- Loading stuff -->
+    <script src="assets/js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
