--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" light-mode="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +10,18 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
+
+    <!-- Open Graph for Social Media -->
     <meta property="og:site_name" content="https://micodestudio.fr/">
     <meta property="og:title" content="Micode Studio">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://micodestudio.fr//">
+    <meta property="og:url" content="https://micodestudio.fr/" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://micodestudio.fr//">
+
+    <!-- Twitter Posts -->
+    <meta name="twitter:site" content="https://micodestudio.fr/" />
+    
     <meta name="application-name" content="Micode Studio" />
     <meta name="apple-mobile-web-app-title" content="Micode Studio" />
     <!--For Dark/Light mode Toggle-->
